Option added to CMake building facility: BUILD_DROPPED (default: NO)

--- a/branches/branch-playground/plugins/autoaway/CMakeLists.txt
+++ b/branches/branch-playground/plugins/autoaway/CMakeLists.txt
@@ -1,3 +1,4 @@
+IF(BUILD_DROPPED)
 IF(NOT WIN32 AND NOT APPLE)
     INCLUDE(CheckFunctionExists)
     INCLUDE(FindX11)
@@ -67,3 +68,4 @@ IF(COMPILE_PLUGIN)
 ELSE(COMPILE_PLUGIN)
     MESSAGE(STATUS "XScreenSaver library not found, autoaway plugin disabled")
 ENDIF(COMPILE_PLUGIN)
+ENDIF(BUILD_DROPPED)
