--- a/branches/branch-playground/plugins/floaty/CMakeLists.txt
+++ b/branches/branch-playground/plugins/floaty/CMakeLists.txt
@@ -1,6 +1,7 @@
 ##################
 # floaty library #
 ##################
+IF(BUILD_DROPPED)
 SET(floaty_SRCS
         floaty.cpp
         floatywnd.cpp
@@ -15,3 +16,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(floaty)
+ENDIF(BUILD_DROPPED)
