--- a/branches/branch-playground/plugins/forward/CMakeLists.txt
+++ b/branches/branch-playground/plugins/forward/CMakeLists.txt
@@ -1,6 +1,7 @@
 ###################
 # forward library #
 ###################
+IF(BUILD_DROPPED)
 SET(forward_SRCS
         forward.cpp
         forwardcfg.cpp
@@ -19,3 +20,5 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(forward)
+ENDIF(BUILD_DROPPED)
+
