--- a/branches/branch-playground/plugins/icons/CMakeLists.txt
+++ b/branches/branch-playground/plugins/icons/CMakeLists.txt
@@ -1,6 +1,7 @@
 #################
 # icons library #
 #################
+IF(BUILD_DROPPED)
 SET(icons_SRCS
         icon.cpp
         iconcfg.cpp
@@ -19,3 +20,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(icons)
+ENDIF(BUILD_DROPPED)
