--- a/branches/branch-playground/plugins/zodiak/CMakeLists.txt
+++ b/branches/branch-playground/plugins/zodiak/CMakeLists.txt
@@ -1,6 +1,7 @@
 ##################
 # zodiak library #
 ##################
+IF(BUILD_DROPPED)
 SET(zodiak_SRCS
         zodiak.cpp
 )
@@ -10,3 +11,4 @@ SET(zodiak_HDRS
 )
 
 SIM_ADD_PLUGIN(zodiak)
+ENDIF(BUILD_DROPPED)
