--- a/branches/branch-playground/plugins/__migrate/CMakeLists.txt
+++ b/branches/branch-playground/plugins/__migrate/CMakeLists.txt
@@ -1,6 +1,7 @@
 #####################
 # __migrate library #
 #####################
+IF(BUILD_DROPPED)
 SET(__migrate_SRCS
         migrate.cpp
         migratedlg.cpp
@@ -19,3 +20,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(__migrate)
+ENDIF(BUILD_DROPPED)
