--- a/branches/branch-playground/plugins/about/CMakeLists.txt
+++ b/branches/branch-playground/plugins/about/CMakeLists.txt
@@ -1,6 +1,7 @@
 #################
 # about library #
 #################
+IF(BUILD_DROPPED)
 
 SET(about_SRCS
         about.cpp
@@ -20,3 +21,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(about)
+ENDIF(BUILD_DROPPED)
