--- a/branches/branch-playground/plugins/action/CMakeLists.txt
+++ b/branches/branch-playground/plugins/action/CMakeLists.txt
@@ -1,6 +1,7 @@
 ##################
 # action library #
 ##################
+IF(BUILD_DROPPED)
 SET(action_SRCS
         action.cpp
         actioncfg.cpp
@@ -25,3 +26,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(action)
+ENDIF(BUILD_DROPPED)
