--- a/branches/branch-playground/plugins/background/CMakeLists.txt
+++ b/branches/branch-playground/plugins/background/CMakeLists.txt
@@ -1,6 +1,7 @@
 ######################
 # background library #
 ######################
+IF(BUILD_DROPPED)
 SET(background_SRCS
         background.cpp
         bkgndcfg.cpp
@@ -19,3 +20,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(background)
+ENDIF(BUILD_DROPPED)
