--- a/branches/branch-playground/plugins/dock/CMakeLists.txt
+++ b/branches/branch-playground/plugins/dock/CMakeLists.txt
@@ -1,6 +1,7 @@
 ################
 # dock library #
 ################
+IF(BUILD_DROPPED)
 SET(dock_SRCS
         dock.cpp
         dockcfg.cpp
@@ -25,3 +26,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(dock)
+ENDIF(BUILD_DROPPED)
