--- a/branches/branch-playground/plugins/netmonitor/CMakeLists.txt
+++ b/branches/branch-playground/plugins/netmonitor/CMakeLists.txt
@@ -1,6 +1,7 @@
 ######################
 # netmonitor library #
 ######################
+IF(BUILD_DROPPED)
 PROJECT(netmonitor)
 
 SET(netmonitor_SRCS
@@ -17,3 +18,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(netmonitor)
+ENDIF(BUILD_DROPPED)
