--- a/branches/branch-playground/plugins/ontop/CMakeLists.txt
+++ b/branches/branch-playground/plugins/ontop/CMakeLists.txt
@@ -1,6 +1,7 @@
 #################
 # ontop library #
 #################
+IF(BUILD_DROPPED)
 SET(ontop_SRCS
         ontop.cpp
         ontopcfg.cpp
@@ -23,3 +24,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(ontop)
+ENDIF(BUILD_DROPPED)
