--- a/branches/branch-playground/plugins/styles/CMakeLists.txt
+++ b/branches/branch-playground/plugins/styles/CMakeLists.txt
@@ -2,6 +2,7 @@
 # styles library #
 ##################
 
+IF(BUILD_DROPPED)
 SET(styles_SRCS
         fontconfig.cpp
         styles.cpp
@@ -23,3 +24,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(styles)
+ENDIF(BUILD_DROPPED)
