--- a/branches/branch-playground/plugins/transparent/CMakeLists.txt
+++ b/branches/branch-playground/plugins/transparent/CMakeLists.txt
@@ -1,6 +1,7 @@
 #######################
 # transparent library #
 #######################
+IF(BUILD_DROPPED)
 SET(transparent_SRCS
         transparent.cpp
         transparentcfg.cpp
@@ -24,3 +25,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(transparent)
+ENDIF(BUILD_DROPPED)
