--- a/branches/branch-playground/plugins/weather/CMakeLists.txt
+++ b/branches/branch-playground/plugins/weather/CMakeLists.txt
@@ -1,6 +1,7 @@
 ###################
 # weather library #
 ###################
+IF(BUILD_DROPPED)
 SET(weather_SRCS
         weather.cpp
         weathercfg.cpp
@@ -28,3 +29,4 @@ REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
 SIM_ADD_PLUGIN(weather)
+ENDIF(BUILD_DROPPED)
