* logindlg back to _core

--- a/branches/branch-playground/plugins/_core/_core.vcproj
+++ b/branches/branch-playground/plugins/_core/_core.vcproj
@@ -622,6 +622,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath="sim\simgui\logindlg.cpp"
+				>
+			</File>
+			<File
 				RelativePath="maininfo.cpp"
 				>
 				<FileConfiguration
@@ -1430,6 +1434,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\sim\simgui\moc_logindlg.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\moc_maininfo.cpp"
 					>
 				</File>
@@ -2004,6 +2012,31 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\sim\simgui\logindlg.h"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Moc&apos;ing $(InputName).h ..."
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
+						Outputs="$(InputDir)moc_$(InputName).cpp"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Moc&apos;ing $(InputName).h ..."
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
+						Outputs="$(InputDir)moc_$(InputName).cpp"
+					/>
+				</FileConfiguration>
+			</File>
+
 			<File
 				RelativePath="maininfo.h"
 				>
