* added missin header

--- a/branches/branch-playground/plugins/_core/_core.vcproj
+++ b/branches/branch-playground/plugins/_core/_core.vcproj
@@ -2885,6 +2885,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\ui_logindlgbase.h"
+					>
+				</File>
+				<File
 					RelativePath=".\ui_maininfobase.h"
 					>
 				</File>
