--- a/branches/branch-playground/plugins/autoaway/CMakeLists.txt
+++ b/branches/branch-playground/plugins/autoaway/CMakeLists.txt
@@ -47,6 +47,10 @@ IF(COMPILE_PLUGIN)
             autoawaycfgbase.ui
     )
 
+    SET(autoaway_LIBS
+            _core
+    )
+
     IF(WIN32)
         SET(autoaway_SRCS
             ${autoaway_SRCS}
