--- a/branches/branch-playground/plugins/action/CMakeLists.txt
+++ b/branches/branch-playground/plugins/action/CMakeLists.txt
@@ -22,6 +22,10 @@ SET(action_UICS
         menucfgbase.ui
 )
 
+SET(action_LIBS
+        _core
+)
+
 REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
