--- a/branches/branch-playground/plugins/floaty/CMakeLists.txt
+++ b/branches/branch-playground/plugins/floaty/CMakeLists.txt
@@ -12,6 +12,10 @@ SET(floaty_HDRS
         floatywnd.h
 )
 
+SET(floaty_LIBS
+        _core
+)
+
 REMOVE_DEFINITIONS(-DQT3_SUPPORT)
 REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
 REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
