--- a/branches/branch-playground/plugins/_core/_core.vcproj
+++ b/branches/branch-playground/plugins/_core/_core.vcproj
@@ -62,7 +62,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="_NDEBUG;NDEBUG;MAKE__CORE_LIB"
+				PreprocessorDefinitions="_NDEBUG;NDEBUG;CORE_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -159,7 +159,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="_DEBUG;DEBUG;MAKE__CORE_LIB"
+				PreprocessorDefinitions="_DEBUG;DEBUG;CORE_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
