--- a/branches/branch-playground/plugins/autoaway/CMakeLists.txt
+++ b/branches/branch-playground/plugins/autoaway/CMakeLists.txt
@@ -15,16 +15,14 @@ IF(NOT WIN32 AND NOT APPLE)
     ENDIF(XSS_IN_XEXT)
     IF(XSS_LIB)
         CHECK_INCLUDE_FILES("X11/extensions/scrnsaver.h" HAVE_X11_EXTENSIONS_SCRNSAVER)
-    ELSE(XSS_LIB)
-        CHECK_INCLUDE_FILES("Carbon/Carbon.h" HAVE_CARBON_CARBON_H)
     ENDIF(XSS_LIB)
-    IF(HAVE_X11_EXTENSIONS_SCRNSAVER OR HAVE_CARBON_CARBON_H)
+    IF(HAVE_X11_EXTENSIONS_SCRNSAVER)
         SET(COMPILE_PLUGIN TRUE)
-    ELSE(HAVE_X11_EXTENSIONS_SCRNSAVER OR HAVE_CARBON_CARBON_H)
+    ELSE(HAVE_X11_EXTENSIONS_SCRNSAVER)
         IF( X11_Xscreensaver_FOUND )
             SET(COMPILE_PLUGIN TRUE)
         ENDIF( X11_Xscreensaver_FOUND )
-    ENDIF(HAVE_X11_EXTENSIONS_SCRNSAVER OR HAVE_CARBON_CARBON_H)
+    ENDIF(HAVE_X11_EXTENSIONS_SCRNSAVER)
 ELSE(NOT WIN32 AND NOT APPLE)
     SET(COMPILE_PLUGIN TRUE)
 ENDIF(NOT WIN32 AND NOT APPLE)
@@ -47,6 +45,10 @@ IF(COMPILE_PLUGIN)
             autoawaycfgbase.ui
     )
 
+    SET(autoaway_LIBS
+            _core
+    )
+
     IF(WIN32)
         SET(autoaway_SRCS
             ${autoaway_SRCS}
@@ -60,9 +62,6 @@ IF(COMPILE_PLUGIN)
 
     LINK_DIRECTORIES(${X11_LIBRARY_DIR})
     INCLUDE_DIRECTORIES(${X11_INCLUDE_DIR})
-    REMOVE_DEFINITIONS(-DQT3_SUPPORT)
-    REMOVE_DEFINITIONS(-DQT_3SUPPORT_LIB)
-    REMOVE_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
     SIM_ADD_PLUGIN(autoaway)
     TARGET_LINK_LIBRARIES(autoaway ${XSS_LIB})
 ELSE(COMPILE_PLUGIN)
